<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Welcome.Login"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:theme="@style/themeText"
        android:textSize="36dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/spotifyGreen"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingBottom="25dp"
            android:hint="Email"
            android:textColor="@color/spotifyGreen"
            android:textColorHint="@color/spotifyGreen"
            android:theme="@style/themeText"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:textSize="14dp"
            android:textColorHint="@color/spotifyGreen"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/spotifyGreen"
            android:ems="10"
            android:paddingBottom="25dp"
            android:hint="@string/password"
            android:textColor="@color/spotifyGreen"
            android:inputType="textPassword"
            android:theme="@style/themeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="327dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/login"
            android:textColor="@color/backgroundBlack"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/termsAndConditions"
        android:paddingTop="32dp"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/termsAndConditions"
        android:textSize="10sp"
        android:theme="@style/themeText"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/signUpTextButton"
        android:paddingTop="32dp"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/SignUp"
        android:textSize="12sp"
        android:theme="@style/themeText"
        tools:ignore="SmallSp" />


</LinearLayout>